fixing overlapping images

--- a/blocks/image-carousel/image-carousel.css
+++ b/blocks/image-carousel/image-carousel.css
@@ -22,6 +22,13 @@
     transition: transform 0.5s ease;
   }
   
+  .image-carousel .slide {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    flex-shrink: 0;
+  }
+  
   .image-carousel img {
     width: 400px;
     height: 300px;
